--- a/Desktop/updated backend/package.json
+++ b/Desktop/updated backend/package.json
@@ -2,9 +2,9 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.js","type":"module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+   "start":"node index.js"
   },
   "keywords": [],
   "author": "",
